--- a/app/views/admin/site_steps/_footer.html.erb
+++ b/app/views/admin/site_steps/_footer.html.erb
@@ -2,10 +2,12 @@
   <div class="wrapper">
     <%= link_to 'Cancel', admin_sites_path, class: 'c-button -outline -dark-text js-cancel' %>
     <div>
-      <button type="button" class="c-button js-continue <%= @site.id ? '-outline -dark-text' : '' %>"><%= Admin::SiteStepsController::CONTINUE %></button>
       <% if @site.id %>
-        <button type="button" class="c-button js-save"><%= Admin::SiteStepsController::SAVE %>></button>
-      <% end %>
+        <%= f.button Admin::SiteStepsController::CONTINUE, value: Admin::SiteStepsController::CONTINUE, type: 'submit', method: :put, class: 'c-button -outline -dark-text' %>
+        <%= f.button Admin::SiteStepsController::SAVE, value: Admin::SiteStepsController::SAVE, type: 'submit', method: :put, class: 'c-button' %>
+      <% else %>
+        <%= f.button Admin::SiteStepsController::CONTINUE, value: Admin::SiteStepsController::CONTINUE, type: 'submit', method: :put, class: 'c-button' %>
+    <% end %>
     </div>
   </div>
 </div>
