--- a/app/views/admin/site_steps/name.html.erb
+++ b/app/views/admin/site_steps/name.html.erb
@@ -2,12 +2,12 @@
 <%= render partial: 'shared/errors', locals: { resource: @site } %>
 <%= Gon::Base.render_data(camel_case: true, camel_depth: 3) %>
 
-<div class="l-site-creation -name">
-  <div class="wrapper">
-    <h1>Site name</h1>
-    <p class="intro">Please choose a name for the site and provide the list of all the URLs it can be accessed from.</p>
+<%= form_for @site, url: wizard_path, method: :put do |f| %>
+  <div class="l-site-creation -name">
+    <div class="wrapper">
+      <h1>Site name</h1>
+      <p class="intro">Please choose a name for the site and provide the list of all the URLs it can be accessed from.</p>
 
-    <%= form_for @site, url: wizard_path, method: :put do |f| %>
       <div class="site-name">
         <%= f.label :name, for: 'name' %>
         <%= f.text_field :name, id:'name', placeholder: 'Type here the site’s name' %>
@@ -15,9 +15,7 @@
 
       <div class="js-urls"></div>
 
-      <%= render partial: 'form_footer', locals: { f: f} %>
-    <% end %>
+    </div>
   </div>
-</div>
-
-<%= render partial: 'footer' %>
+  <%= render partial: 'footer', locals: { f: f} %>
+<% end %>
