--- a/app/views/admin/site_steps/users.html.erb
+++ b/app/views/admin/site_steps/users.html.erb
@@ -1,26 +1,24 @@
 <%= render partial: 'header'%>
 <%= render partial: 'shared/errors', locals: { resource: @site } %>
 
-<div class="l-site-creation -users">
-  <div class="wrapper">
-    <h1>Users</h1>
-    <p class="intro">Choose which user can manage the site.</p>
-    <%= form_for @site, url: wizard_path, method: :put do |f| %>
-      <div class="c-users-list">
-        <% User.all.each_with_index do |user, i| %>
-          <div class="user">
-            <label for="user-<%= user.id %>"><%= user.name %></label>
-            <%= check_box_tag "site[user_ids][]", user.id, f.object.users.include?(user), id: ('user-' + user.id.to_s) %>
-            <div class="content">
-              <h3><%= user.name %></h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+<%= form_for @site, url: wizard_path, method: :put do |f| %>
+  <div class="l-site-creation -users">
+    <div class="wrapper">
+      <h1>Users</h1>
+      <p class="intro">Choose which user can manage the site.</p>
+        <div class="c-users-list">
+          <% User.all.each do |user| %>
+            <div class="user">
+              <label for="user-<%= user.id %>"><%= user.name %></label>
+              <%= check_box_tag "site[user_ids][]", user.id, f.object.users.include?(user), id: ('user-' + user.id.to_s) %>
+              <div class="content">
+                <h3><%= user.name %></h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+              </div>
             </div>
-          </div>
-        <% end %>
-        <%= render partial: 'form_footer', locals: { f: f } %>
-      </div>
-    <% end %>
+          <% end %>
+        </div>
+    </div>
   </div>
-</div>
-
-<%= render partial: 'footer' %>
+  <%= render partial: 'footer', locals: { f: f } %>
+<% end %>
