--- a/app/assets/stylesheets/components/admin/c-users-list.scss
+++ b/app/assets/stylesheets/components/admin/c-users-list.scss
@@ -33,6 +33,7 @@
 
     .content {
       padding: 20px;
+      transition: background .3s, color .1s, border-color .3s;
       border: 1px solid $color-7;
       border-radius: 7px;
 
