--- a/app/views/admin/_header.html.erb
+++ b/app/views/admin/_header.html.erb
@@ -1,4 +1,4 @@
-<div class="c-header-admin">
+<div class="c-header-admin -bright">
   <div class="wrapper">
     <div>
       <% unless @breadcrumbs.blank? %>
