Fix: invisble pages no longer displayed on the third menu level

--- a/app/views/front/_menu.html.erb
+++ b/app/views/front/_menu.html.erb
@@ -98,7 +98,9 @@
             <% if @site_page.depth >= 2 %>
                 <ul>
                   <% @site_page.children.each do |child_page| -%>
-                      <li><%= page_link child_page %></li>
+                      <% if child_page.visible? %>
+                        <li><%= page_link child_page %></li>
+                      <% end%>
                   <% end %>
                 </ul>
             <% end %>
