--- a/app/assets/stylesheets/layouts/front/l-analysis-dashboard.scss
+++ b/app/assets/stylesheets/layouts/front/l-analysis-dashboard.scss
@@ -84,6 +84,19 @@ $secondary-container-initial-width: 400px;
     @media #{$mq-laptop} {
       height: calc(100vh - 328px);
     }
+
+    .leaflet-control-attribution {
+      color: $color-4;
+
+      a {
+        background-color: transparent;
+        color: $color-4;
+      }
+    }
+
+    .leaflet-bar a {
+      color: $color-4;
+    }
   }
 
   .graph {
