Creates the basic dashboard chart view w/ sample

--- a/app/views/site_page/analysis_dashboard.html.erb
+++ b/app/views/site_page/analysis_dashboard.html.erb
@@ -15,12 +15,8 @@
     </div>
   </div>
   <div class="secondary-container">
-    <div class="graph">
-      Graph 1
-    </div>
-    <div class="graph">
-      Graph 2
-    </div>
+    <div class="graph js-chart-1"></div>
+    <div class="graph js-chart-2"></div>
     <div class="bookmarks">
       Bookmarks
     </div>
