First version of filter and columns

--- a/app/views/site_page/_site_map.html.erb
+++ b/app/views/site_page/_site_map.html.erb
@@ -1,4 +1,4 @@
-This has a beautiful map
+<h1><%= @menu_root.site.name%></h1>
 <p>
   <a href="<%= @menu_tree.keys.first.url %>"><%= @menu_tree.keys.first.name %></a>
 </p>
