--- a/app/views/management/page_steps/filters.html.erb
+++ b/app/views/management/page_steps/filters.html.erb
@@ -2,9 +2,22 @@
 <%= render partial: 'shared/errors', locals: { resource: @page } %>
 
 <%= form_for @page, url: wizard_path, method: :put do |f| %>
-    <% @dataset_setting.each do |ds|%>
-        <%= ds.name %>
+    <% @dataset_setting.columns_visible.split(' ').each do |vf|%>
+        <fieldset>
+          <table>
+            <tr>
+              <td><%= vf %></td>
+              <td>FROM OPTION</td>
+              <td>TO OPTION</td>
+              <td>Visible checkbox</td>
+            </tr>
+          </table>
+        </fieldset>
+
     <% end %>
+    <%= render partial: 'footer', locals: {f: f} %>
 <% end %>
+<%= render partial: 'shared/errors', locals: { resource: @page } %>
+
 
 <%= console if Rails.env.development? %>
