Changed the sample data of the analysis dashboard to comply with the frontend

--- a/app/views/site_page/analysis_dashboard.html.erb
+++ b/app/views/site_page/analysis_dashboard.html.erb
@@ -5,9 +5,9 @@
 
 <div class="l-analysis-dashboard">
   <div class="main-container">
-    <h2>Title of the dashboard</h2>
+    <h2><%= @site_page.name %></h2>
     <p class="description">
-      One sentence description
+      <%= @site_page.description %>
     </p>
     <div class="filters js-filters">
       Filters coming soon
