--- a/app/views/management/page_steps/filters.html.erb
+++ b/app/views/management/page_steps/filters.html.erb
@@ -1,23 +1,28 @@
 <%= render partial: 'header'%>
 <%= render partial: 'shared/errors', locals: { resource: @page } %>
+<%= Gon::Base.render_data(camel_case: true, camel_depth: 3) %>
+
+
+
+<div class="js-filters"></div>
 
 <%= form_for @page, url: wizard_path, method: :put do |f| %>
-    <% @dataset_setting.columns_visible.split(' ').each do |vf|%>
-        <% field = @fields.find_by(name: vf) %>
+    <%# @dataset_setting.columns_visible.split(' ').each do |vf|%>
+        <%# field = @fields.find_by(name: vf) %>
         <fieldset>
           <table>
             <tr>
-              <td><%= vf %></td>
-              <% if field.type == ''%>
+              <td><%#= vf %></td>
+              <%# if field.type == ''%>
               <td>FROM OPTION</td>
               <td>TO OPTION</td>
               <td>Visible checkbox</td>
-              <% end %>
+              <%# end %>
             </tr>
           </table>
         </fieldset>
 
-    <% end %>
+    <%# end %>
     <%= render partial: 'footer', locals: {f: f} %>
 <% end %>
 <%= render partial: 'shared/errors', locals: { resource: @page } %>
