--- a/app/assets/javascripts/templates/management/filter.hbs
+++ b/app/assets/javascripts/templates/management/filter.hbs
@@ -5,12 +5,12 @@
     <div class="">
       <label for="">Filter {{index}}</label>
       <div>
-        <select id="filter-{{index}}" data-id="{{index}}">
+        <select id="filter-{{index}}" data-id="{{index}}" class="js-input-filter-type">
           {{#each fields}}
-            <option value="{{fields}}">{{fields}}</option>
+            <option value="{{name}}">{{name}}</option>
           {{/each}}
         </select>
-        <input type="text" id="from-{{index}}" data-id="{{index}}" class='js-input-filter js-input-filter-type' value="from">
+        <input type="text" id="from-{{index}}" data-id="{{index}}" class='js-input-filter' value="from">
         <input type="text" id="to-{{index}}" data-id="{{index}}" class='js-input-filter' value="to">
         <input type="checkbox" id="visible-{{index}}" data-id="{{index}}" class='js-input-visible'>Variable
         <button type="button" id="remove-{{index}}" data-id="{{index}}" class="js-remove-filter">Remove Filter</button>
