Bug fix: crash when an open content page had no content

--- a/app/views/site_page/open_content.html.erb
+++ b/app/views/site_page/open_content.html.erb
@@ -2,7 +2,7 @@
 
 <div class="c-content">
   <div class="wrapper">
-    <%= @site_page.content['body'].html_safe unless @site_page.content['body'].blank? %>
+    <%= @site_page.content['body'].html_safe unless @site_page.content.blank? || @site_page.content['body'].blank? %>
   </div>
 </div>
 
