--- a/app/views/front/_menu.html.erb
+++ b/app/views/front/_menu.html.erb
@@ -36,9 +36,9 @@
   </div>
 
   <div class="mobile-menu wrapper">
-    <a class="logo-container" href="/">
-      <div class="logo"></div>
-    </a>
+    <div class="logo-container" href="/">
+      <a class="logo" href="/" style="background-image: url(<%= (@image_url && @image_url != '/')? asset_url(@image_url) : asset_url('logo')%>);"></a>
+    </div>
     <div class="hamburger-menu js-mobile-menu">
       <div></div>
       <div></div>
@@ -48,7 +48,7 @@
 
   <div class="desktop-menu wrapper">
     <div class="logo-container">
-      <a class="logo" href="<%= (@image_url && @image_url != '/')? asset_url(@image_url) : asset_url('logo')%>"></a>
+      <a class="logo" href="/" style="background-image: url(<%= (@image_url && @image_url != '/')? asset_url(@image_url) : asset_url('logo')%>);"></a>
     </div>
     <ul>
       <% @menu_root.children.each do |child_page| -%>
