Creates the component to manage the bookmarks

--- a/app/assets/stylesheets/components/shared/c-button.scss
+++ b/app/assets/stylesheets/components/shared/c-button.scss
@@ -18,6 +18,10 @@
     color: $color-4;
   }
 
+  &.-normal-weight {
+    font-weight: $font-weight-normal;
+  }
+
   &.-disabled {
     cursor: default;
     opacity: .3;
