--- a/app/views/site_page/analysis_dashboard.html.erb
+++ b/app/views/site_page/analysis_dashboard.html.erb
@@ -18,8 +18,7 @@
   <div class="secondary-container">
     <div class="graph js-chart-1"></div>
     <div class="graph js-chart-2"></div>
-    <div class="bookmarks">
-      Bookmarks
+    <div class="bookmarks js-bookmarks">
     </div>
   </div>
 </div>
