--- a/app/assets/stylesheets/front/_settings-theme-lsa.scss
+++ b/app/assets/stylesheets/front/_settings-theme-lsa.scss
@@ -61,9 +61,9 @@ $color-6:  #333;
 $color-7:  #3b3b3b;
 $color-8:  #f5f4f4;
 $color-9:  #eceaea;
-$color-10: transparent; // Fake color, to be replaced
-$color-11: transparent; // Fake color, to be replaced
-$color-12: transparent; // Fake color, to be replaced
+$color-10: darken(saturate($color-1, 10%), 5%);
+$color-11: #fff00e;
+$color-12: #dd3e21;
 
 // General layout
 $body-max-width:         1280px;
