Improves the UI of the bookmarks
* Lets the user save the new name of a bookmark by clicking somewhere else after editing
* Displays a message if there isn't any bookmark
* Prevents the notifications to be duplicated when several of them needs to be displayed at once

--- a/app/assets/javascripts/templates/front/dashboard-bookmarks.hbs
+++ b/app/assets/javascripts/templates/front/dashboard-bookmarks.hbs
@@ -3,6 +3,9 @@
   <button type="button" class="c-button -outline -dark-text -normal-weight js-add-state">Add state</button>
 </header>
 <ul class="bookmarks">
+  {{#unless bookmarks.length}}
+    <li class="no-bookmark">You haven't saved any bookmark yet</li>
+  {{/unless}}
   {{#each bookmarks}}
     <li>
       <span title="Click to edit the name" contenteditable="true" class="js-name" data-id="{{@index}}">{{name}}</span>
