Changed the navigation in steps creation and added it to the page creation

--- a/app/views/management/page_steps/dataset.html.erb
+++ b/app/views/management/page_steps/dataset.html.erb
@@ -1,4 +1,5 @@
-<div class="c-extended-header -high">
+<%= render partial: 'shared/navigation_header', locals: {form_steps: @site.form_steps, id: @site.id, current_step: step} %>
+<%= render partial: 'shared/errors', locals: { resource: @page } %><div class="c-extended-header -high">
   <div class="wrapper">
     <div class="two-options">
       <div class="description">
