--- a/app/views/admin/site_steps/name.html.erb
+++ b/app/views/admin/site_steps/name.html.erb
@@ -1,4 +1,4 @@
-<%= render partial: 'header'%>
+<%= render partial: 'shared/navigation_header', locals: {form_steps: @site.form_steps, id: @site.id, current_step: step} %>
 <%= Gon::Base.render_data(camel_case: true, camel_depth: 3) %>
 
 <%= form_for @site, url: wizard_path, method: :put do |f| %>
