--- a/app/views/management/page_steps/filters.html.erb
+++ b/app/views/management/page_steps/filters.html.erb
@@ -1,5 +1,5 @@
 <%= render partial: 'header'%>
-<%= render partial: 'shared/navigation_header', locals: {form_steps: @site.form_steps, id: @site.id, current_step: step} %>
+<%= render partial: 'shared/navigation_header', locals: {form_steps: @page.form_steps, id: @page.id, current_step: step} %>
 <%= render partial: 'shared/errors', locals: { resource: @page } %>
 <%= Gon::Base.render_data(camel_case: true, camel_depth: 3) %>
 
