Page creation refactoring

--- a/app/assets/javascripts/templates/management/dashboard-filters.hbs
+++ b/app/assets/javascripts/templates/management/dashboard-filters.hbs
@@ -1,5 +1,5 @@
 <div class="c-filters">
-  <input type="hidden" id="page_dataset_setting_filters" name="page[data_setting][filters]" value="{{json}}">
+  <input type="hidden" id="page_dataset_setting_filters" name="page[dataset_setting][filters]" value="{{json}}">
 
   {{#each filters}}
     <div>
@@ -11,8 +11,8 @@
               <option value="{{name}}" {{#if_eq name ../name}}selected="selected"{{/if_eq}}>{{name}}</option>
             {{/each}}
         </select>
-        <input type="text" name="from" id="from-{{@index}}" data-id="{{@index}}" class="js-input-filter" placeholder="From" value="{{from}}">
-        <input type="text" name="to" id="to-{{@index}}" data-id="{{@index}}" class="js-input-filter" placeholder="To" value="{{to}}">
+        <input type="text" id="from-{{@index}}" data-name="from" data-id="{{@index}}" class="js-input-filter" placeholder="From" value="{{from}}">
+        <input type="text" id="to-{{@index}}" data-name="to" data-id="{{@index}}" class="js-input-filter" placeholder="To" value="{{to}}">
         <input type="checkbox" id="variable-{{@index}}" data-id="{{@index}}" class="js-input-variable" {{#if variable}}checked="checked"{{/if}}>
         <label for="variable-{{@index}}">Variable</label>
         <button type="button" id="remove-{{@index}}" data-id="{{@index}}" class="js-remove-filter">Remove Filter</button>
