--- a/app/views/management/page_steps/preview.html.erb
+++ b/app/views/management/page_steps/preview.html.erb
@@ -1,6 +1,7 @@
-<%= render partial: 'header'%>
 <%= render partial: 'shared/navigation_header', locals: {form_steps: @page.form_steps, id: @page.id, current_step: step} %>
 <%= render partial: 'shared/errors', locals: { resource: @page } %>
+<%= Gon::Base.render_data(camel_case: true, camel_depth: 3) %>
+
 
 <%= form_for @page, url: wizard_path, method: :put do |f| %>
 
@@ -10,9 +11,9 @@
 
   <div class="l-analysis-dashboard">
     <div class="main-container">
-      <h2>Title</h2>
+      <h2><%= @page.name %></h2>
       <p class="description">
-        One-sentence description
+        <%= @page.description %>
       </p>
       <div class="filters js-filters">
         Filters coming soon
