--- a/app/views/management/site_pages/edit.html.erb
+++ b/app/views/management/site_pages/edit.html.erb
@@ -1,4 +1,4 @@
-<%= render "management/site_pages/forms/#{@partial}", site_page: @site_page, edit: true, form_for_path: [:management, @site_page] unless @partial.nil? %>
+<%= render "management/site_pages/forms/#{@partial}", site_page: @site_page, edit: true, form_for_path: [:management, :site,  @site_page] unless @partial.nil? %>
 
 <div class="c-action-bar">
   <div class="wrapper">
