Analysis Dashboard creation refactoring

--- a/app/assets/javascripts/templates/management/dashboard-filters.hbs
+++ b/app/assets/javascripts/templates/management/dashboard-filters.hbs
@@ -1,5 +1,5 @@
 <div class="c-filters">
-  <input type="hidden" id="page_dataset_setting_filters" name="page[dataset_setting][filters]" value="{{json}}">
+  <input type="hidden" id="site_page_dataset_setting_filters" name="site_page[dataset_setting][filters]" value="{{json}}">
 
   {{#each filters}}
     <div>
