--- a/app/views/management/page_steps/columns.html.erb
+++ b/app/views/management/page_steps/columns.html.erb
@@ -7,7 +7,7 @@
     <% @fields.each do |field|%>
         <fieldset>
           <%= field.name %>
-          <%= check_box_tag "page[dataset_setting][visible_fields][]", field.name %>
+          <%= check_box_tag "site_page[dataset_setting][visible_fields][]", field.name %>
         </fieldset>
     <% end %>
     <%= render partial: 'footer', locals: {f: f} %>
