Styles the filters

--- a/app/assets/javascripts/templates/front/dashboard-filters.hbs
+++ b/app/assets/javascripts/templates/front/dashboard-filters.hbs
@@ -1,5 +1,5 @@
 {{#each filters}}
-  <div  class="js-filter">
+  <div  class="c-select js-filter">
     <select data-id="{{@index}}">
       <option value="" {{#unless value}}selected="selected"{{/unless}}>Filter by {{name}}</option>
       {{#each values}}
