--- a/app/assets/stylesheets/layouts/front/l-analysis-dashboard.scss
+++ b/app/assets/stylesheets/layouts/front/l-analysis-dashboard.scss
@@ -58,17 +58,24 @@ $secondary-container-initial-width: 400px;
   }
 
   .filters {
-    height: 35px;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
     margin-top: 20px;
-    line-height: 35px;
-    text-align: center;
-    text-transform: uppercase;
 
-    @if $theme == 2 {
-      background: rgba($color-4, .1);
-    } @else {
-      background: rgba($color-1, .1);
-      color: $color-1;
+    @media #{$mq-tablet} {
+      flex-direction: row;
+      align-items: flex-start;
+      height: 35px;
+    }
+
+    > *:not(:last-of-type) {
+      margin-bottom: 15px;
+
+      @media #{$mq-tablet} {
+        margin-bottom: 0;
+        margin-right: 17px;
+      }
     }
   }
 
