--- a/app/assets/stylesheets/admin/_settings.scss
+++ b/app/assets/stylesheets/admin/_settings.scss
@@ -65,3 +65,5 @@ $mq-tablet: 'screen and (min-width: #{$breakpoint-tablet})';
 $mq-laptop: 'screen and (min-width: #{$breakpoint-laptop})';
 
 $mq-body-width: 'screen and (min-width: #{$body-max-width})';
+
+$theme: 2;
