First version of the merged page creation

--- a/app/views/management/page_steps/columns.html.erb
+++ b/app/views/management/page_steps/columns.html.erb
@@ -1,4 +1,4 @@
-<%= render partial: 'shared/navigation_header', locals: {form_steps: @page.form_steps, id: @page.id, current_step: step} %>
+<%= render partial: 'shared/navigation_header', locals: {form_steps: form_steps, id: @page.id, current_step: step} %>
 <%= render partial: 'shared/errors', locals: { resource: @page } %>
 
 <h1>SELECT COLUMNS</h1>
