--- a/app/assets/javascripts/templates/front/chart-widget.hbs
+++ b/app/assets/javascripts/templates/front/chart-widget.hbs
@@ -1,4 +1,4 @@
-<div class="c-dashboard-chart">
+<div class="c-chart-widget">
   <div class="chart js-chart"></div>
   <div class="js-chart-selector"></div>
 </div>
