--- a/app/assets/stylesheets/components/front/c-hierarchical-select.scss
+++ b/app/assets/stylesheets/components/front/c-hierarchical-select.scss
@@ -61,6 +61,7 @@
   }
 
   .steps-wrapper {
+    display: block;
     position: absolute;
     top: 40px;
     left: 0;
@@ -68,13 +69,10 @@
     border-top: 1px solid rgba($color-4, .3);
     background-color: $color-3;
     box-shadow: 0 2px 3px 0 rgba($color-4, .3);
-    opacity: 1;
     overflow: hidden;
-    pointer-events: all;
 
     &.-hidden {
-      opacity: 0;
-      pointer-events: none;
+      display: none;
     }
   }
 
