--- a/app/views/management/page_steps/_footer.html.erb
+++ b/app/views/management/page_steps/_footer.html.erb
@@ -1,6 +1,8 @@
 <div class="form-group row">
   <div class="col-sm-offset-2 col-sm-10">
-    <%= f.button 'CONTINUE', value: Management::PageStepsController::CONTINUE, type: 'submit', method: :put, class: 'btn btn-primary' %>
+    <% unless local_assigns[:no_continue] %>
+      <%= f.button 'CONTINUE', value: Management::PageStepsController::CONTINUE, type: 'submit', method: :put, class: 'btn btn-primary' %>
+    <% end %>
     <% if @page.id %>
         <%= f.button 'SAVE CHANGES', value: Management::PageStepsController::SAVE, type: 'submit', method: :put, class: 'btn btn-primary' %>
     <% end %>
