--- a/app/views/management/page_steps/type.html.erb
+++ b/app/views/management/page_steps/type.html.erb
@@ -13,42 +13,45 @@
 <%= render partial: 'shared/navigation_header', locals: {form_steps: form_steps, id: @page.id, current_step: step} %>
 <%= render partial: 'shared/errors', locals: { resource: @page } %>
 
-<div class="l-page-creation -type">
-  <div class="wrapper">
-    <div class="c-card-list">
-      <div class="card -footer-at-bottom">
-        <h3 class="title">Open Content page</h3>
-        <p class="description">Create a new page with any type of content you want in.</p>
-        <div class="footer">
-          <%#= link_to 'Create', {controller: 'management/site_pages', action: 'new', site_slug: @site.slug, type: ContentType::OPEN_CONTENT}, class: 'c-button' %>
+<%= form_for @page, url: wizard_path, method: :put do |f| %>
+  <div class="l-page-creation -type">
+    <div class="wrapper">
+      <div class="c-card-list">
+        <div class="card -footer-at-bottom">
+          <h3 class="title">Open Content page</h3>
+          <p class="description">Create a new page with any type of content you want in.</p>
+          <div class="footer">
+            <%= button_to 'Create', management_site_page_step_path(@site.slug), method: :put, params: {id: :type, 'site_page[content_type]': ContentType::OPEN_CONTENT}, class: 'c-button'  %>
+          </div>
         </div>
-      </div>
-      <div class="card -footer-at-bottom">
-        <h3 class="title">Analysis Dashboard</h3>
-        <p class="description">Build a dashboard based on a dataset.</p>
-        <div class="footer">
-          <%#= link_to 'Create', {controller: 'management/site_pages', action: 'new', site_slug: @site.slug, type: ContentType::ANALYSIS_DASHBOARD}, class: 'c-button' %>
+        <div class="card -footer-at-bottom">
+          <h3 class="title">Analysis Dashboard</h3>
+          <p class="description">Build a dashboard based on a dataset.</p>
+          <div class="footer">
+            <%= button_to 'Create', management_site_page_step_path(@site.slug), method: :put, params: {id: :type, 'site_page[content_type]': ContentType::ANALYSIS_DASHBOARD}, class: 'c-button'  %>
+          </div>
         </div>
-      </div>
-      <div class="card -footer-at-bottom">
-        <h3 class="title">Dynamic Indicator Dashboard</h3>
-        <p class="description">Create a dynamic indicator based on a list of widgets.</p>
-        <div class="footer">
-          <%#= link_to 'Create', {controller: 'management/site_pages', action: 'new', site_slug: @site.slug, type: ContentType::DYNAMIC_INDICATOR_DASHBOARD}, class: 'c-button' %>
+        <div class="card -footer-at-bottom">
+          <h3 class="title">Dynamic Indicator Dashboard</h3>
+          <p class="description">Create a dynamic indicator based on a list of widgets.</p>
+          <div class="footer">
+            <%= button_to 'Create', management_site_page_step_path(@site.slug), method: :put, params: {id: :type, 'site_page[content_type]': ContentType::DYNAMIC_INDICATOR_DASHBOARD }, class: 'c-button'  %>
+          </div>
         </div>
-      </div>
-      <div class="card -footer-at-bottom">
-        <h3 class="title">External link</h3>
-        <p class="description">Add a link to appear in the menus.</p>
-        <div class="footer">
-          <%#= link_to 'Create', {controller: 'management/site_pages', action: 'new', site_slug: @site.slug, type: ContentType::LINK}, class: 'c-button' %>
+        <div class="card -footer-at-bottom">
+          <h3 class="title">External link</h3>
+          <p class="description">Add a link to appear in the menus.</p>
+          <div class="footer">
+            <%= button_to 'Create', management_site_page_step_path(@site.slug), method: :put, params: {id: :type, 'site_page[content_type]': ContentType::LINK}, class: 'c-button'  %>
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
 
-<% content_for :action_bar do %>
-  <%= link_to 'Cancel', {controller: 'management/site_pages', action: 'index', site_slug: @site.slug}, class: 'c-button -outline -dark-text' %>
-  <a class="c-button -disabled">Continue</a>
+  <% content_for :action_bar do %>
+    <%= link_to 'Cancel', {controller: 'management/site_pages', action: 'index', site_slug: @site.slug}, class: 'c-button -outline -dark-text' %>
+    <a class="c-button -disabled">Continue</a>
+  <% end %>
+  <%= render partial: 'footer', locals: {f: f, no_continue: true} %>
 <% end %>
